# nova_voice_engine

./: .gitignore  CMakeLists.txt  README.md
include/app/: application.hpp
include/network/: udp_sender.hpp
include/playback/: audio_player.hpp
include/processing/: audio_gain_controller.hpp  echo_canceller.hpp  noise_suppressor.hpp  voice_activity_detector.hpp
include/streaming/: collector.hpp
src/app/: application.cpp
src/codec/: opus_codec.cpp
src/network/: udp_receiver.cpp  udp_sender.cpp
src/playback/: audio_player.cpp
src/processing/: audio_gain_controller.cpp  echo_canceller.cpp  noise_suppressor.cpp  voice_activity_detector.cpp
src/streaming/: collector.cpp  slicer.cpp
